2005-03-15  Petr Ovtchenkov  <ptr@island...>

	* src/complex.cpp, complex_exp.cpp, complex_io.cpp, complex_trig.cpp:
	use achievements in _cmath.h---use overloaded funcs; mascarade from
	complex_impl.h not required more.

	* src/complex_impl.h: deleted.

	* test/unit/cmath_test.cpp: check nested sqrt(sqrt)---possible problem with macro

2005-03-14  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_msvc.h: _STLP_SAME_FUNCTION_NAME_RESOLUTION_BUG notion
	removed, impossible to reproduce, maybe fixed by the #pragma intrinsic/function
	directives.
	
	* stlport/stl/_cmath.h, cstdlib: Fix .Net 2003 and .Net 2005 beta support.
	
	* stlport/stl/_cmath.h: Removed _STLP_SAME_FUNCTION_NAME_RESOLUTION_BUG notion,
	no more _STLP_DO_* macros.
	
	* test/unit/valarray_test.cpp: New tests to check right compilation of 
	transcendentals valarray functions.
	
	* stlport/stl/_valarray.h: Replaced all the _STLP_DO_* macros by real 
	function calls.
	
	* src/fstream.cpp: Add INVALID_SET_FILE_POINTER definition when missing for
	Win32 IO implementation thanks Micheal Fink report. Add compilation check 
	of right STLport file descriptor definition.
	
2005-03-12  Francois Dumont  <dums@stlport...>

	* stlport/stl/_tree.h: Fix equal_range_unique bug thanks Gunter.
	
	* test/unit/map_test.cpp: Add of the test to reproduce the bug
	above.
	
2005-03-11  Petr Ovtchenkov  <ptr@island...>

	* build/test/unit/gcc.mak: don't write runtime path to libstlport
	in case of crosscompilation.

	* stlport/stl/_cmath.h: exclude *f and *l variants of math functions
	if ones absent in system; add missed hypot function; few workarounds
	for uClibc and for VC.

	* src/complex.cpp, complex_exp.cpp, complex_trig.cpp: workaround
	for systems without *f and *l variants of math functions.

	* test/unit/resolve_name.cpp: exclude test line that confuse VC.

	* stlport/cstdlib: div isn't intrinsic for VC.

	* stlport/config/stl_gcc.h: don't use *f and *l math functions in
	case of uClibc.
