@@ -214,21 +214,21 @@ Notes:
 -----------------------------------------------------------------------
 Compiler:                       Visual C++ 2005 Beta1 Version 8.0.40607.16
 -----------------------------------------------------------------------
-Date:                           2005-02-18
+Date:                           2005-03-15
 STLP Version:                   current CVS STLPORT_5_0 branch
 Reporter:                       dums (Francois Dumont)
 Status (release-shared):        runtime fail
 Notes:                          Microsoft do not grant the msvcp80.dll file
                                 in their free package.
-Status (dbg-shared):            All pass (316 tests)
+Status (dbg-shared):            All pass (318 tests)
 Notes:
-Status (stldbg-shared):         All pass (316 tests)
+Status (stldbg-shared):         All pass (318 tests)
 Notes:
-Status (release-static):        All pass (316 tests)
+Status (release-static):        All pass (318 tests)
 Notes:                          
-Status (dbg-static):            All pass (316 tests)
+Status (dbg-static):            All pass (318 tests)
 Notes:
-Status (stldbg-static):         All pass (316 tests)
+Status (stldbg-static):         All pass (318 tests)
 Notes:
 
 -----------------------------------------------------------------------
