@@ -3,6 +3,7 @@
 #include <iostream>
 #include <iomanip>
 #include <sstream>
+#include <vector>
 
 #include "full_streambuf.h"
 #include "cppunit/cppunit_proxy.h"
@@ -10,6 +11,10 @@
 #if !defined (STLPORT) || defined(_STLP_USE_NAMESPACES)
 using namespace std;
 #endif
+
+//The macro value gives approximately the generated file
+//size in Go
+//#define CHECK_BIG_FILE 4
 
 //
 // TestCase class
@@ -25,6 +30,10 @@ class FstreamTest : public CPPUNIT_NS::TestCase
   CPPUNIT_TEST(buf);
   CPPUNIT_TEST(rdbuf);
   CPPUNIT_TEST(streambuf_output);
+  //CPPUNIT_TEST(file_traits);
+#if defined (CHECK_BIG_FILE)
+  CPPUNIT_TEST(big_file);
+#endif
   CPPUNIT_TEST_SUITE_END();
 
   protected:
@@ -36,6 +45,10 @@ class FstreamTest : public CPPUNIT_NS::TestCase
     void buf();
     void rdbuf();
     void streambuf_output();
+    //void file_traits();
+#if defined (CHECK_BIG_FILE)
+    void big_file();
+#endif
 };
 
 CPPUNIT_TEST_SUITE_REGISTRATION(FstreamTest);
@@ -270,3 +283,111 @@ void FstreamTest::streambuf_output()
   }
 #endif
 }
+
+/*
+template <typename _CharT>
+struct file_test_traits : public char_traits<_CharT> {
+};
+
+void FstreamTest::file_traits()
+{
+  //File preparation:
+  {
+    ofstream ofstr("test_file.txt", ios_base::binary);
+    //if (!ofstr)
+      //No test if we cannot create the file
+      //return;
+    ofstr << "0123456789";
+    CPPUNIT_ASSERT( ofstr );
+  }
+
+  {
+    typedef file_test_traits<char> ftraits;
+    typedef std::basic_ifstream<char, ftraits> ft_ifstreams;
+    typedef std::basic_string<char, ftraits> ft_string;
+
+    ft_ifstreams infile("test_file.txt");
+    CPPUNIT_ASSERT( infile );
+    ft_string res;
+    infile >> res;
+    CPPUNIT_ASSERT( infile );
+    CPPUNIT_ASSERT( res == "0123456789" );
+  }
+}
+*/
+
+#if defined (CHECK_BIG_FILE)
+void FstreamTest::big_file()
+{
+  vector<pair<streamsize, streamoff> > file_pos;
+
+  //Big file creation:
+  {
+    ofstream out("big_file.txt");
+    CPPUNIT_ASSERT( out );
+
+    //We are going to generate a file with the following schema for the content:
+    //0(1019 times)0000  //1023 characters + 1 charater for \n (for some platforms it will be a 1 ko line)
+    //0(1019 times)0001
+    //...
+    //0(1019 times)1234
+    //...
+
+    //Generation of the number of loop:
+    streamoff nb = 1;
+    for (int i = 0; i < 20; ++i) {
+      //This assertion check that the streamoff can at least represent the necessary integers values
+      //for this test:
+      CPPUNIT_ASSERT( (nb << 1) > nb );
+      nb <<= 1;
+    }
+    CPPUNIT_ASSERT( nb * CHECK_BIG_FILE >= nb );
+    nb *= CHECK_BIG_FILE;
+
+    //Preparation of the ouput stream state:
+    out << setiosflags(ios_base::right) << setfill('*');
+    for (streamoff index = 0; index < nb; ++index) {
+      if (index % 1024 == 0) {
+        file_pos.push_back(make_pair(out.tellp(), index));
+        CPPUNIT_ASSERT( file_pos.back().first != streamsize(-1) );
+        if (file_pos.size() > 1) {
+          CPPUNIT_ASSERT( file_pos[file_pos.size() - 1].first > file_pos[file_pos.size() - 2].first );
+        }
+      }
+      out << setw(1023) << index << '\n';
+    }
+  }
+
+  {
+    ifstream in("big_file.txt");
+    CPPUNIT_ASSERT( in );
+
+    string line;
+    vector<pair<streamsize, streamsize> >::const_iterator pit(file_pos.begin()),
+                                                          pitEnd(file_pos.end());
+    for (; pit != pitEnd; ++pit) {
+      in.seekg((*pit).first);
+      CPPUNIT_ASSERT( in );
+      in >> line;
+      size_t lastStarPos = line.rfind('*');
+      CPPUNIT_ASSERT( atoi(line.substr(lastStarPos + 1).c_str()) == (*pit).second );
+    }
+  }
+
+  /*
+  The following test has been used to check that STLport do not generate
+  an infinite loop when the file size is larger than the streamsize and
+  streamoff representation (32 bits or 64 bits).
+  {
+    ifstream in("big_file.txt");
+    CPPUNIT_ASSERT( in );
+    char tmp[4096];
+    streamsize nb_reads = 0;
+    while ((!in.eof()) && in.good()){
+      in.read(tmp, 4096);
+      nb_reads += in.gcount();
+    }
+  }
+  */
+}
+#endif
