@@ -1,3 +1,8 @@
+2005-03-15  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl/_fstream.h: Fix _Noconv_input helper class default implementation.
+	Returns traits::eof() rather than 0.
+
 2005-03-15  Petr Ovtchenkov  <ptr@island...>
 
 	* src/complex.cpp, complex_exp.cpp, complex_io.cpp, complex_trig.cpp:
